<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="15dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/question"
        app:errorEnabled="true"
        style="@style/TextLabel_Normal_With_ClearTextIcon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:imeActionLabel="hehe"
            android:imeOptions="actionDone"
            android:padding="10dp"
            android:textSize="25dp"
            android:hint="@string/tip_input_hint"
            android:inputType="numberDecimal"
            android:textColorHint="@color/gray_1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="19dp"
        android:text="@string/question"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/editTextLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="13dp"/>

    <RadioGroup
        android:id="@+id/radioButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/roundUpTip"
        android:layout_marginTop="25dp">
        <RadioButton
            android:id="@+id/amazing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing"/>
        <RadioButton
            android:id="@+id/good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good"/>
        <RadioButton
            android:id="@+id/okay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okay"/>
    </RadioGroup>

    <LinearLayout
        android:id="@+id/roundUpTip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/radioButtonContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/calculateTip"
        android:layout_marginTop="15dp"
        android:weightSum="8">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:text="@string/round_up_tip"
            android:textStyle="bold"
            android:layout_weight="3"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/tipSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginEnd="15dp"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calculateTip"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:text="@string/calculate"
        app:layout_constraintTop_toBottomOf="@id/roundUpTip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        style="@style/CustomButtonStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/calculateTip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center_vertical|end">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_amount"
            android:textSize="22dp"/>
        <View
            android:layout_width="15dp"
            android:layout_height="0dp"/>
        <TextView
            android:id="@+id/resultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="test"
            android:visibility="gone"
            android:textSize="22dp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>